quic/s2n-quic-core/src/recovery/bbr/snapshots/quic__s2n-quic-core__src__recovery__bbr__probe_bw__events__start_down.snap
---
source: quic/s2n-quic-core/src/recovery/bbr/probe_bw.rs
expression: ""
---
BbrStateChanged { path_id: 0, state: ProbeBwDown }
